# removert

./: .clang-format  CMakeLists.txt  README.md  removert_PCD.cpp
config/: params_av.yaml  params_kitti.yaml
include/: Removerter.h  utils.h
src/: Removerter.cpp
